Bug fixes; add ability to read and write ".nodes.patch" files * Add ability to import and export nodes as patches * Fix "Import Nodes" internally using absolute paths for "originDirectory" * Fix some issues with exporting empty node lists. * Make the "No Save Location" list exclude empty node lists * Hovering over the "unsaved" markers display "Unsaved"

--- a/src/app/filename/filename.html
+++ b/src/app/filename/filename.html
@@ -1,5 +1,5 @@
 <div class="filename-display">
-  <div class="save-status-display" ng-hide="isSaved">*</div>
+  <div class="save-status-display" ng-hide="isSaved" title="Unsaved">*</div>
   <div class="treename-display">{{treeName}}</div>
   <div ng-show="path" class="path-display">{{path}}</div>
 </div>
