Module synchronization tweaks; bug fixes * When synchronizing a module, do nothing if no actual changes will be made. * Fix the outputs being set to use empty strings as keys if left unspecified. * Fix deleting a property in the properties panel not marking anything for change. * Fix undoing and redoing EditNode erasing the "pathToTree" property of a module.

--- a/src/app/property/property-panel.html
+++ b/src/app/property/property-panel.html
@@ -55,7 +55,7 @@
                                placeholder="value" expandable="a" formatter="parseJson(input)" value="prop.value">
                 </b3-text-input>
               </td>
-              <td><a href="#" propertyremovable class="button alert right">-</a></td>
+              <td><a href="#" propertyremovable class="button alert right" ng-click="markForChange()">-</a></td>
             </tr>
           </tbody>
         </table>
