Tweaks and bug fixes * Update README.md * Add tooltips to "Add" and "Remove" buttons * Fix opening trees with null parameters resulting in a script error * Fix inputting invalid regular expressions into the search bar resulting in a lot of script errors (searching no longer supports regular expressions)

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -30,7 +30,8 @@
           <div class="row" id="addnode-properties">
             <label class="clearfix">
               <span class="left">Properties</span>
-              <a href="#" id="addnode-addproperty" ng-click="addProperty()" class="button success right">+</a>
+              <a href="#" id="addnode-addproperty" ng-click="addProperty()" class="button success right"
+                 title="Add Property">+</a>
             </label>
 
             <!-- Using two separate tables because the properties list for a module is a read-only view of the tree's 
@@ -55,7 +56,7 @@
           <div class="row" id="addnode-output" style="display: none;">
             <label class="clearfix">
               <span class="left">Output</span>
-              <a href="#" ng-click="addOutput()" class="button success right">+</a>
+              <a href="#" ng-click="addOutput()" class="button success right" title="Add Output">+</a>
             </label>
 
             <table id="addnode-output-table">
