--- a/src/app/project/modal-newproject.html
+++ b/src/app/project/modal-newproject.html
@@ -18,7 +18,7 @@
           <div class="row" id="newproject-nodedirs">
             <label class="clearfix">
               <span class="left">Node Loading Directories</span>
-              <a href="#" ng-click="addNodeDir()" class="button success right">+</a>
+              <a href="#" ng-click="addNodeDir()" class="button success right" title="Add Node Loading Directory">+</a>
             </label>
 
             <table id="newproject-nodedirs-table">
