Some tweaks out of the blue because I felt like it * Fix not being able to focus back onto the nodes panel after first focusing on it and dragging a node into the editor canvas * Fix opening a tree that no longer exists through a module causing the tree to open with no nodes at all * Add an "Edit Node" button directly beneath the name of a selected block.

--- a/src/app/property/property-panel.html
+++ b/src/app/property/property-panel.html
@@ -24,6 +24,7 @@
       <div class="row">
         <label>Name</label>
         <input id="name" type="text" placeholder="name" class="monospace" readonly>
+        <a href="#" class="button edit-node secondary" ng-hide="block.name == 'Root'" ng-click="showEditNodeModal(block.name)">Edit Node</a>
       </div>
 
       <div class="row">
